--- a/styles/main.css
+++ b/styles/main.css
@@ -11,15 +11,17 @@ hr {
   height: 5px;
   margin: 25px 0;
 }
-
 body {
-  background-color: #f0f0f6;
+  width: 100%;
   display: flex;
+  background-color: #f0f0f6;
   gap: 28.5px;
 }
 
 .side-profile-menu {
   min-width: 305px;
+  height: max-content;
+  position: static;
   background-color: #fff;
   padding: 50px 40px 25px 40px;
 }
@@ -28,8 +30,8 @@ body {
 .img-avatar-block {
   margin-bottom: 30px;
   position: relative;
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 .online-indicator {
   position: absolute;
@@ -41,8 +43,7 @@ body {
   right: 46.5px; /* Отступ от правого края */
   border: 2px solid white; /* Белая рамка, чтобы был виден на фоне */
 }
-.avatar-img {
-  margin: 0px 34.5px;
+.avatar-img::after {
 }
 .person-name {
   text-align: center;
@@ -170,7 +171,7 @@ body {
 /* *========================================================================================= */
 
 .main-block {
-  width: 100%;
+  max-width: 100%;
 }
 
 .main-menu {
@@ -185,16 +186,16 @@ body {
 .block-content {
   padding: 93px 0 0 60px;
 }
- 
+
 .block-content h1 {
   font-family: Inter-SemiBold;
   font-size: 48px;
   line-height: 123.6%;
-  color: #2B2B2B;
+  color: #2b2b2b;
 }
 
 .block-content h1 span {
-  color: #FFA500; /* Оранжевый цвет для "Front-end Developer" */
+  color: #ffa500; /* Оранжевый цвет для "Front-end Developer" */
 }
 
 .block-content p {
@@ -205,14 +206,14 @@ body {
 
 .main-menu_button {
   padding: 10px 20px;
-  background-color: #FFA500;
+  background-color: #ffa500;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
   margin-top: 25px;
-  color: #2B2B2B;
+  color: #2b2b2b;
   font-family: Inter-Medium;
 }
 
@@ -228,13 +229,13 @@ body {
 
 /* *========================================================================================= */
 
-  .block-service {
-    margin-top: 138px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.block-service {
+  margin-top: 138px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .service-heading {
   color: #2b2b2b;
@@ -257,13 +258,14 @@ body {
 .services {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
 }
 
 .service-container {
   width: 310px;
   height: 225px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -288,7 +290,7 @@ body {
 }
 
 .service-container a {
-  color: #FFB400;
+  color: #ffb400;
   font-family: Roboto-Bold;
   font-size: 12px;
   line-height: auto;
@@ -327,13 +329,13 @@ body {
 .price-container {
   width: 310px;
   height: 609px;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 33px 25px 33px;
 }
-.price-container h1{
+.price-container h1 {
   color: #2b2b2b;
   font-family: Inter-SemiBold;
   font-size: 24px;
@@ -347,13 +349,13 @@ body {
   line-height: 123.6%;
   margin-top: 19px;
 }
-.price span{
+.price span {
   color: #2b2b2b;
   font-family: Inter-Regular;
   font-size: 15px;
   line-height: 24px;
 }
-.price-container p{
+.price-container p {
   color: #767676;
   font-family: Inter-Regular;
   font-size: 15px;
@@ -361,24 +363,24 @@ body {
   text-align: center;
   margin-top: 8px;
 }
-.price-container ul{
-  color: #2B2B2B;
+.price-container ul {
+  color: #2b2b2b;
   font-family: Inter-Regular;
   font-size: 15px;
   line-height: 24px;
   width: 100%;
   margin: 21px 0 5px 0;
 }
-.price-container ul li{
-display: flex;
-margin: 0 0 16px 0;
+.price-container ul li {
+  display: flex;
+  margin: 0 0 16px 0;
 }
 .price-button {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 30px;
   width: 169px;
   height: 38px;
-  color: #2B2B2B;
+  color: #2b2b2b;
   font-family: Inter-SemiBold;
   font-size: 14px;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
@@ -392,9 +394,9 @@ margin: 0 0 16px 0;
   padding-top: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Центрирует содержимое по вертикали */
-  align-items: center; /* Центрирует содержимое по горизонтали */
-  height: 100vh; /* Высота блока на всю высоту экрана */
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   position: sticky;
   top: 0;
   align-self: start;
@@ -402,12 +404,12 @@ margin: 0 0 16px 0;
 .block-theme-switch-btn {
 }
 .theme-switch-btn {
-  margin: 0 auto;в
+  margin: 0 auto;
 }
 .nav-menu {
-  flex-grow: 1; /* Занимает оставшееся пространство по вертикали */
+  flex-grow: 1;
   display: flex;
-  justify-content: center; /* Центрирует содержимое меню */
+  justify-content: center;
 }
 .nav-menu-list {
   display: flex;
